get profile status
