# docs/swagger.json
@@ -260,6 +260,53 @@
                 }
             }
         },
+        "/profile-status": {
+            "get": {
+                "description": "Retorna si el perfil ha sido completado o no",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Obtener estado del perfil",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Estado del perfil",
+                        "schema": {
+                            "$ref": "#/definitions/auth.ProfileStatusResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Datos inválidos",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Usuario no autenticado",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error interno del servidor",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/register/user": {
             "post": {
                 "description": "Crea un nuevo usuario en Firebase y lo guarda en la base de datos local",
@@ -528,6 +575,14 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "auth.ProfileStatusResponse": {
+            "type": "object",
+            "properties": {
+                "perfil_completado": {
+                    "type": "boolean"
                 }
             }
         },
